--- a/views/actor.hbs
+++ b/views/actor.hbs
@@ -9,6 +9,7 @@
             <th>Actor ID</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -17,6 +18,12 @@
             <td>{{this.actor_id}}</td>
             <td>{{this.first_name}}</td>
             <td>{{this.last_name}}</td>
+            <td>
+                <a class="btn btn-success btn-sm" href="/actors/{{this.actor_id}}/update">
+                Update
+                </a>
+                <a class="btn btn-danger btn-sm" href="/actors/{{this.actor_id}}/delete">Delete</a>
+            </td>
         </tr>
         {{/each}}
     </tbody>
