--- a/views/films.hbs
+++ b/views/films.hbs
@@ -1,6 +1,8 @@
 {{#extends 'base'}}
 
 {{#block "content"}}
+<h1>Films</h1>
+<a href="/films/create" class="btn btn-primary my-3">Add New</a>
 <form method="GET">
     <input type="text" name="title" placeholder="Enter search terms"/>
     <input type="text" name="year" placeholder="Enter year here"/>
