--- a/views/create_film.hbs
+++ b/views/create_film.hbs
@@ -22,6 +22,15 @@
             {{/each}}
         </select>
     </div>
+    <div>
+        <label>Actors</label>
+        <select name="actors" class="form-control" multiple>
+            {{#each actors}}
+            <option value="{{this.actor_id}}">{{this.first_name}} {{this.last_name}}</option>
+            {{/each}}
+        </select>
+
+    </div>
     <input type="submit" class="btn btn-primary mt-3"/>
 
 </form>
