--- a/views/edit_film.hbs
+++ b/views/edit_film.hbs
@@ -22,6 +22,17 @@
             {{/each}}
         </select>
     </div>
+     <div>
+        <label>Actors</label>
+        <select name="actors" class="form-control" multiple>
+            {{#each actors}}
+            <option value="{{this.actor_id}}"
+                {{#inArray ../actor_ids this.actor_id}}selected{{/inArray}}
+            >{{this.first_name}} {{this.last_name}}</option>
+            {{/each}}
+        </select>
+
+    </div>
     <input type="submit" class="btn btn-primary mt-3"/>
 
 </form>
