--- a/views/edit_film.hbs
+++ b/views/edit_film.hbs
@@ -24,7 +24,7 @@
     </div>
      <div>
         <label>Actors</label>
-        <select name="actors" class="form-control" multiple>
+        <select id="actors" name="actors" class="form-control" multiple>
             {{#each actors}}
             <option value="{{this.actor_id}}"
                 {{#inArray ../actor_ids this.actor_id}}selected{{/inArray}}
@@ -36,6 +36,25 @@
     <input type="submit" class="btn btn-primary mt-3"/>
 
 </form>
+{{/block}}
+
+{{#block "css"}}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+{{/block}}
+
+{{#block "scripts"}}
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+  integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+         $('#actors').select2();
+    });
+    </script>
+
 {{/block}}
 
 {{/extends}}
